--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vant": "^2.8.7",
     "vue": "^2.6.11",
